--- a/flutter_tutorial/pubspec.yaml
+++ b/flutter_tutorial/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  # 注意添加flutter_driver，如下三行代码是一个整体
+  flutter_driver:
+    sdk: flutter
+  test: any
 
 
 # For information on the generic Dart part of this file, see the
