--- a/flutter_tutorial/pubspec.yaml
+++ b/flutter_tutorial/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   dio: ^3.0.9 #latest version
+  # bot_toast: ^3.0.0
   # shared_preferences: ^0.5.7
 
 dev_dependencies:
